--- a/withdraw.html
+++ b/withdraw.html
@@ -5,39 +5,81 @@
 <title>Withdraw</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
+
 <style>
 * { box-sizing: border-box; }
-body { background:#020617; color:white; font-family:Arial, sans-serif; padding:14px; margin:0; }
+body {
+  background:#020617;
+  color:white;
+  font-family:Arial, sans-serif;
+  padding:14px;
+  margin:0;
+  overflow-x:hidden;
+}
 .container { max-width:420px; margin:0 auto; }
-.card { background:#0f172a; padding:14px; border-radius:14px; margin-bottom:12px; }
-h3 { margin:0 0 8px 0; font-size:14px; }
-input, select { width:100%; padding:10px; margin-top:6px; border-radius:10px; border:none; background:#020617; color:white; font-size:14px; height:50px; }
-button { width:100%; padding:12px; margin-top:12px; border:none; border-radius:12px; background:#3b82f6; color:white; font-weight:bold; }
+.card {
+  background:#0f172a;
+  padding:14px;
+  border-radius:14px;
+  margin-bottom:12px;
+}
+h3 { margin:0 0 8px 0; font-size:14px; font-weight:bold; }
+input, select {
+  width:100%;
+  padding:10px;
+  margin-top:6px;
+  border-radius:10px;
+  border:none;
+  background:#020617;
+  color:white;
+  font-size:14px;
+  height: 50px;
+}
+button {
+  width:100%;
+  padding:12px;
+  margin-top:12px;
+  border:none;
+  border-radius:12px;
+  background:#3b82f6;
+  color:white;
+  font-weight:bold;
+  font-size:14px;
+}
 button:disabled { opacity:0.5; }
 .msg { margin-top:10px; padding:8px; border-radius:8px; font-size:13px; }
 .error { background:#ef4444; }
 .success { background:#22c55e; }
 .loading { background:#facc15; color:black; }
-.hidden { display:none; }
 .small { font-size:12px; opacity:0.75; }
+.hidden { display:none; }
 </style>
 </head>
 
 <body>
+
 <div class="container">
 
+  <!-- USER INFO -->
   <div class="card" id="userInfo">Loading user…</div>
+
+  <!-- BALANCE -->
   <div class="card" id="balanceBox">Loading balance…</div>
 
+  <!-- MESSAGE FOR LOW BALANCE -->
   <div class="card hidden" id="lowBalanceMsg">
     <div class="msg error">
-      Minimum withdrawal:<br>
-      ₦5,000 (Bank)<br>
-      $20 (Crypto)
+      Minimum balance required to withdraw:<br>
+      ₦5,000 for bank transfer<br>
+      $20 for crypto
     </div>
+    <button onclick="window.location.reload()">Go Back</button>
   </div>
 
+  <!-- WITHDRAW FORM -->
   <div class="card hidden" id="withdrawForm">
+
     <h3>Withdrawal Method</h3>
     <select id="method">
       <option value="">Select method</option>
@@ -45,8 +87,9 @@ button:disabled { opacity:0.5; }
       <option value="crypto">Crypto (BNB BEP20)</option>
     </select>
 
+    <!-- BANK -->
     <div id="bankFields" class="hidden">
-      <h3>Bank Details</h3>
+      <h3 style="margin-top:10px">Bank Details</h3>
       <select id="bank">
         <option value="">Select Bank</option>
         <option>Opay</option>
@@ -56,175 +99,195 @@ button:disabled { opacity:0.5; }
         <option>Access Bank</option>
         <option>Zenith Bank</option>
         <option>UBA</option>
+        <option>First Bank</option>
+        <option>FCMB</option>
         <option>Other</option>
       </select>
       <input id="otherBank" placeholder="Other bank name" class="hidden">
       <input id="acctName" placeholder="Account Name">
-      <input id="acctNumber" placeholder="Account Number">
+      <input type="number" id="acctNumber" placeholder="Account Number">
       <input id="bankAmount" type="number" placeholder="Amount (₦)">
+      <div class="small">Minimum: ₦5,000</div>
     </div>
 
+    <!-- CRYPTO -->
     <div id="cryptoFields" class="hidden">
-      <h3>Crypto Details</h3>
-      <input id="wallet" placeholder="BNB BEP20 Address">
+      <h3 style="margin-top:10px">Crypto Details</h3>
+      <input id="wallet" placeholder="BNB Smart Chain (BEP20) Address">
       <input id="cryptoAmount" type="number" placeholder="Amount ($)">
+      <div class="small">Minimum: $20</div>
     </div>
 
-    <h3>Contact</h3>
-    <input id="whatsapp" placeholder="WhatsApp Number">
-    <input id="phone" placeholder="Phone Number">
+    <!-- CONTACT -->
+    <h3 style="margin-top:10px">Contact Details</h3>
+    <input type="tel" id="whatsapp" placeholder="WhatsApp Number">
+    <input type="tel" id="phone" placeholder="Calling Number">
 
+    <!-- PASSCODE -->
     <button id="generatePasscodeBtn">Generate Withdrawal Passcode</button>
-    <input id="passcode" placeholder="Enter passcode" class="hidden">
-    <button id="withdrawBtn" class="hidden">Submit Withdrawal</button>
+    <div id="passcodeContainer" class="hidden">
+      <input id="passcode" placeholder="Enter passcode">
+      <div class="small">
+        Check your Telegram bot for the code: 
+        <a href="https://t.me/intelpremiumbot" target="_blank">@intelpremiumbot</a>
+      </div>
+    </div>
+
+    <button id="withdrawBtn" disabled>Submit Withdrawal</button>
     <div id="msgBox"></div>
   </div>
 
 </div>
 
 <script>
-// Telegram WebApp init
+const API = "/withdraw"; // all calls go through server
 const tg = window.Telegram?.WebApp;
 tg?.ready();
-const initData = tg?.initData;
+
+const user = tg?.initDataUnsafe?.user;
+const telegramId = user ? String(user.id) : null;
 
 const userInfo = document.getElementById("userInfo");
 const balanceBox = document.getElementById("balanceBox");
+const msgBox = document.getElementById("msgBox");
+const withdrawBtn = document.getElementById("withdrawBtn");
 const withdrawForm = document.getElementById("withdrawForm");
 const lowBalanceMsg = document.getElementById("lowBalanceMsg");
-const msgBox = document.getElementById("msgBox");
-
-const method = document.getElementById("method");
-const bank = document.getElementById("bank");
-const otherBank = document.getElementById("otherBank");
-const bankAmount = document.getElementById("bankAmount");
-const cryptoAmount = document.getElementById("cryptoAmount");
-const wallet = document.getElementById("wallet");
-const acctName = document.getElementById("acctName");
-const acctNumber = document.getElementById("acctNumber");
-const whatsapp = document.getElementById("whatsapp");
-const phone = document.getElementById("phone");
-
 const generatePasscodeBtn = document.getElementById("generatePasscodeBtn");
+const passcodeContainer = document.getElementById("passcodeContainer");
 const passcodeInput = document.getElementById("passcode");
-const withdrawBtn = document.getElementById("withdrawBtn");
+
+// Disable form if no Telegram WebApp
+if(!telegramId){
+  userInfo.innerHTML = "❌ Please open this page from the Telegram WebApp.";
+}
 
 let balanceNGN = 0;
-let usdRate = 0.0026;
+let usdRate = 0;
 
-// Simple message display
-function showMsg(text,type="success"){
+// Show user info
+if(telegramId){
+  userInfo.innerHTML = `
+  <b>Name:</b> ${user?.first_name || "N/A"}<br>
+  <b>Username:</b> ${user?.username ? "@"+user.username : "N/A"}<br>
+  <b>ID:</b> ${telegramId}
+  `;
+}
+
+// Show message
+function showMsg(text, type="success"){
   msgBox.innerHTML = text ? `<div class="msg ${type}">${text}</div>` : "";
 }
 
 // Fetch USD rate
 async function fetchUsdRate(){
-  try{
-    const r = await fetch("https://api.exchangerate-api.com/v4/latest/NGN");
-    const d = await r.json();
-    usdRate = d.rates.USD || usdRate;
-  }catch{}
+  try {
+    const res = await fetch("https://api.exchangerate-api.com/v4/latest/NGN");
+    const data = await res.json();
+    return data.rates.USD || 0.0026;
+  } catch { return 0.0026; }
 }
 
 // Load balance from server
 async function loadBalance(){
-  showMsg("Loading balance…","loading");
-  try{
-    const res = await fetch("/get-balance",{
+  if(!telegramId) return;
+  showMsg("Loading balance…", "loading");
+  try {
+    const r = await fetch("/get-balance", {
       method:"POST",
       headers:{ "Content-Type":"application/json" },
-      body: JSON.stringify({ initData })
+      body: JSON.stringify({ telegramId })
     });
-    const data = await res.json();
-    balanceNGN = data.ngn || 0;
+    const d = await r.json();
+    balanceNGN = d?.ngn || 0;
+    usdRate = await fetchUsdRate();
+    const usd = balanceNGN * usdRate;
 
-    await fetchUsdRate();
-    balanceBox.innerHTML = `<b>Balance:</b><br>₦${balanceNGN.toLocaleString()} ≈ $${(balanceNGN*usdRate).toFixed(2)}`;
+    balanceBox.innerHTML = `<b>Balance:</b><br>₦${balanceNGN.toLocaleString()} ≈ $${usd.toFixed(2)}`;
 
-    if(balanceNGN < 5000 && balanceNGN*usdRate < 20){
+    if(balanceNGN < 5000 && usd < 20){
       lowBalanceMsg.classList.remove("hidden");
       withdrawForm.classList.add("hidden");
     }else{
       withdrawForm.classList.remove("hidden");
       lowBalanceMsg.classList.add("hidden");
+      withdrawBtn.disabled = true; // wait for passcode
     }
-
-    // Show user info
-    userInfo.innerHTML = `<b>ID:</b> ${tg.initDataUnsafe.user.id}<br>
-                          <b>Name:</b> ${tg.initDataUnsafe.user.first_name}<br>
-                          <b>Username:</b> ${tg.initDataUnsafe.user.username || "N/A"}`;
-
     showMsg("");
   }catch(err){
-    showMsg("Failed to load balance","error");
+    showMsg("Failed to load balance: "+err.message, "error");
+    withdrawForm.classList.add("hidden");
+    lowBalanceMsg.classList.add("hidden");
   }
 }
-
 loadBalance();
 
 // Show/hide fields
 method.onchange = () => {
-  document.getElementById("bankFields").classList.toggle("hidden", method.value !== "bank");
-  document.getElementById("cryptoFields").classList.toggle("hidden", method.value !== "crypto");
+  bankFields.style.display = method.value==="bank" ? "block" : "none";
+  cryptoFields.style.display = method.value==="crypto" ? "block" : "none";
 };
 bank.onchange = () => {
-  otherBank.classList.toggle("hidden", bank.value !== "Other");
+  otherBank.style.display = bank.value==="Other" ? "block" : "none";
 };
 
 // Generate passcode
 generatePasscodeBtn.onclick = async () => {
+  if(!telegramId) return;
   showMsg("Generating passcode…","loading");
   generatePasscodeBtn.disabled = true;
-
   try{
-    const res = await fetch("/generate-passcode",{
+    const res = await fetch("/generate-passcode", {
       method:"POST",
       headers:{ "Content-Type":"application/json" },
-      body: JSON.stringify({ initData })
+      body: JSON.stringify({ telegramId })
     });
     const data = await res.json();
-    if(!res.ok) throw new Error(data.error);
+    if(!res.ok) throw new Error(data.error || "Failed to generate passcode");
+    showMsg("✅ Passcode sent to your Telegram. Enter it below.", "success");
 
-    showMsg(`✅ Passcode sent via Telegram. Enter it below.`,"success");
-    passcodeInput.classList.remove("hidden");
-    withdrawBtn.classList.remove("hidden");
+    passcodeContainer.classList.remove("hidden");
+    withdrawBtn.disabled = false;
   }catch(err){
-    showMsg(err.message,"error");
+    showMsg("❌ "+err.message, "error");
     generatePasscodeBtn.disabled = false;
   }
 };
 
-// Submit withdrawal
+// Withdraw
 withdrawBtn.onclick = async () => {
-  const m = method.value;
-  if(!m) return showMsg("Select withdrawal method","error");
+  if(!telegramId) return;
+  const methodVal = method.value;
+  if(!methodVal) return showMsg("Select withdrawal method", "error");
 
-  let amount = 0;
-  if(m==="bank"){ 
-    amount = Number(bankAmount.value);
-    if(amount < 5000) return showMsg("Minimum ₦5,000","error");
-    if(amount > balanceNGN) return showMsg("Insufficient balance","error");
+  const passcodeVal = passcodeInput.value.trim();
+  if(!passcodeVal) return showMsg("Enter your passcode", "error");
+
+  let amountNGN = 0;
+  if(methodVal === "bank"){
+    amountNGN = Number(bankAmount.value);
+    if(amountNGN < 5000) return showMsg("Minimum bank withdrawal is ₦5,000", "error");
+    if(amountNGN > balanceNGN) return showMsg("Insufficient balance", "error");
   }
-  if(m==="crypto"){
-    amount = Number(cryptoAmount.value);
-    if(amount < 20) return showMsg("Minimum $20","error");
+  if(methodVal === "crypto"){
+    const usd = Number(cryptoAmount.value);
+    if(usd < 20) return showMsg("Minimum crypto withdrawal is $20", "error");
+    amountNGN = usd / usdRate;
+    if(amountNGN > balanceNGN) return showMsg("Insufficient balance", "error");
   }
 
-  const passcode = passcodeInput.value.trim();
-  if(!passcode) return showMsg("Enter your passcode","error");
-
-  showMsg("Submitting withdrawal…","loading");
+  showMsg("Submitting withdrawal…", "loading");
   withdrawBtn.disabled = true;
 
   try{
-    const res = await fetch("/withdraw",{
+    const res = await fetch(API, {
       method:"POST",
       headers:{ "Content-Type":"application/json" },
       body: JSON.stringify({
-        initData,
-        method: m,
-        amount,
-        passcode,
+        telegramId,
+        method: methodVal,
+        amount: Math.round(amountNGN),
+        passcode: passcodeVal,
         details:{
           bank: bank.value==="Other"?otherBank.value:bank.value,
           accountName: acctName.value,
@@ -235,18 +298,19 @@ withdrawBtn.onclick = async () => {
         }
       })
     });
-
     const data = await res.json();
-    if(!res.ok) throw new Error(data.error);
+    if(!res.ok) throw new Error(data.error||"Withdrawal failed");
 
-    showMsg("✅ Withdrawal submitted","success");
+    showMsg("✅ Withdrawal submitted successfully!", "success");
     balanceNGN = data.newBalance;
     balanceBox.innerHTML = `<b>Balance:</b><br>₦${balanceNGN.toLocaleString()} ≈ $${(balanceNGN*usdRate).toFixed(2)}`;
+    withdrawBtn.disabled = true;
   }catch(err){
-    showMsg(err.message,"error");
+    showMsg("❌ Withdrawal failed: "+err.message, "error");
     withdrawBtn.disabled = false;
   }
 };
 </script>
+
 </body>
 </html>
