--- a/withdraw.html
+++ b/withdraw.html
@@ -74,7 +74,7 @@ button:disabled { opacity:0.5; }
       ₦5,000 for bank transfer<br>
       $20 for crypto
     </div>
-   <button onclick="window.location.href='dashboard.html'">Go Back</button>
+   <button onclick="window.location.href='https://t.me/intelpremiumbot/premiumdash'">Go Back</button>
   </div>
 
   <!-- WITHDRAW FORM -->
