--- a/withdraw.html
+++ b/withdraw.html
@@ -53,6 +53,7 @@ button:disabled { opacity:0.5; }
 .success { background:#22c55e; }
 .loading { background:#facc15; color:black; }
 .small { font-size:12px; opacity:0.75; }
+.small2 { font-size:20px; opacity:0.75; }
 .hidden { display:none; }
 </style>
 </head>
@@ -127,7 +128,7 @@ button:disabled { opacity:0.5; }
     <button id="generatePasscodeBtn">Generate Withdrawal Passcode</button>
     <div id="passcodeContainer" class="hidden">
       <input id="passcode" placeholder="Enter passcode">
-      <div class="small">
+      <div class="small2">
         Check your Telegram bot for the code: 
         <a href="https://t.me/intelpremiumbot" target="_blank">@intelpremiumbot</a>
       </div>
